config/k8s/deploy-posts-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: nubrid/demo-microservices-1-posts-service:0.0.1 # Removing tag `0.0.1` will pull from docker hub
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service-clusterip
spec:
  type: ClusterIP # default; can be removed
  selector:
    app: posts-service
  ports:
    - name: posts-service
      protocol: TCP
      port: 5100
      targetPort: 5100
